--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
 	"private": true,
 	"homepage": "./",
 	"dependencies": {
+		"@ckeditor/ckeditor5-build-classic": "^32.0.0",
+		"@ckeditor/ckeditor5-react": "^4.0.0",
+		"@testing-library/jest-dom": "^5.16.1",
+		"@testing-library/react": "^12.1.2",
+		"@testing-library/user-event": "^13.5.0",
+		"axios": "^0.25.0",
 		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^15.0.1",
 		"express": "^4.17.2",
 		"express-async-handler": "^1.2.0",
+		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.1.8",
 		"multer": "^1.4.4",
@@ -16,26 +24,20 @@
 		"nodemon": "^2.0.15",
 		"path": "^0.12.7",
 		"pm2": "^5.3.0",
-		"slugify": "^1.6.5",
-		"@ckeditor/ckeditor5-build-classic": "^32.0.0",
-		"@ckeditor/ckeditor5-react": "^4.0.0",
-		"@testing-library/jest-dom": "^5.16.1",
-		"@testing-library/react": "^12.1.2",
-		"@testing-library/user-event": "^13.5.0",
-		"axios": "^0.25.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "5.0.0",
 		"react-spinners": "^0.13.8",
+		"slugify": "^1.6.5",
 		"uuid": "^8.3.2",
 		"web-vitals": "^2.1.4"
 	},
 	"devDependencies": {
+		"concurrently": "^7.5.0",
 		"cors": "^2.8.5",
-		"nodemon": "^2.0.20",
-		"concurrently": "^7.5.0"
+		"nodemon": "^2.0.20"
 	},
 	"scripts": {
 		"develop": "bash bin/dev.sh",
@@ -43,7 +45,8 @@
 		"deploy": "deploy-node-app",
 		"test": "react-scripts test",
 		"eject-www": "react-scripts eject",
-		"start": "node src/api/server.js"
+		"start": "node src/api/server.js",
+		"www": "bash bin/dev_www.sh"
 	},
 	"browserslist": [
 		">0.2%",
