--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@ JWT_SECRET_KEY = ObTgWoBoQmyHj3mhkKko0CQl0rjlRZ38
 JWT_EXPIRE = 60m
 
 RESET_PASSWORD_EXPIRE  = 31536000
+
+IAP_SIGNED_HEADER =  ''
+IAP_ENABLED = true
