demo app iap-jwt

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-PORT = 5001
 NODE_ENV = production
 URI = http://localhost:3000
 
@@ -18,4 +17,4 @@ JWT_EXPIRE = 60m
 RESET_PASSWORD_EXPIRE  = 31536000
 
 IAP_SIGNED_HEADER =  ''
-IAP_ENABLED = true
+IAP_ENABLED = false
