--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NODE_ENV = production
 URI = http://localhost:3000
+SERVER = 5000
 
 #mongo db uri
 MONGO_URI ="mongodb+srv://admin:admin@blogtest.abi8stb.mongodb.net/"
